fixed wrapping for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,13 @@ body {
   max-width: 1000px;
   min-height: 100vh;
   margin: auto;
+  padding: 0 20px;
 }
 
 .numbers-wrapper {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: var(--gutter);
   margin: var(--m-sm) 0;
 }
